header uses nav-list

--- a/wordpress/wp-content/themes/thulme/assets/less/style.less
+++ b/wordpress/wp-content/themes/thulme/assets/less/style.less
@@ -8,3 +8,13 @@
 
 // Flat UI
 @import "flat-ui/flat-ui";
+
+.banner {
+  .brand {
+    display: block;
+    margin: (@base-font-size * @base-line-height) auto;
+
+    font-size: @h3;
+    text-align: center;
+  }
+}
