implemented font-awesome

--- a/wordpress/wp-content/themes/thulme/assets/less/style.less
+++ b/wordpress/wp-content/themes/thulme/assets/less/style.less
@@ -9,6 +9,10 @@
 // Flat UI
 @import "flat-ui/flat-ui";
 
+// Font Awesome
+@import "font-awesome/font-awesome";
+
+
 .banner {
   .brand {
     display: block;
