site description in header

--- a/wordpress/wp-content/themes/thulme/assets/less/style.less
+++ b/wordpress/wp-content/themes/thulme/assets/less/style.less
@@ -26,16 +26,15 @@
     background-size: cover;
 
     display: block;
-    margin: (3 * @base-font-size * @base-line-height) auto;
+    margin: (3 * @base-font-size * @base-line-height) auto (2 * @base-font-size * @base-line-height);
     width: 302px;
     height: 50px;
 
     .hide-text();
   }
 
-  .nav-main {
-    border-bottom: 2px dashed @lightgray;
-    padding-bottom: (@base-font-size * @base-line-height);
+  .description {
+    margin-bottom: (2 * @base-font-size * @base-line-height);
   }
 }
 
