typography and containers

--- a/wordpress/wp-content/themes/thulme/assets/less/flat-ui/config.less
+++ b/wordpress/wp-content/themes/thulme/assets/less/flat-ui/config.less
@@ -69,6 +69,7 @@
 @h4: @base-font-size * 2.071; /* 29px */
 @h5: @base-font-size * 2;     /* 28px */
 @h6: @base-font-size * 1.714; /* 24px */
+@p:  @base-font-size * 1.286; /* 18px */
 
 // Icons
 @icon-normal: 16px;
