--- a/wordpress/wp-content/themes/thulme/assets/less/flat-ui/modules/type.less
+++ b/wordpress/wp-content/themes/thulme/assets/less/flat-ui/modules/type.less
@@ -27,11 +27,11 @@ a {
 }
 
 // Heading sizes
-h1, .h1 { font-size: @h1 /* 64px */ }
-h2, .h2 { font-size: @h2 /* 52px */ }
-h3, .h3 { font-size: @h3 /* 40px */ }
-h4, .h4 { font-size: @h4 /* 29px */ }
-h5, .h5 { font-size: @h5 /* 28px */ }
+h1, .h1 { font-size: @h3 /* 40px */ }
+h2, .h2 { font-size: @h5 /* 28px */ }
+h3, .h3,
+h4, .h4,
+h5, .h5,
 h6, .h6 { font-size: @h6 /* 24px */ }
 
 h1, .h1,
@@ -45,16 +45,16 @@ h6, .h6 {
 
 // H1—H6 specific styling
 h1 {
-  font-weight: 700;
+  font-weight: 500;
 }
 
 h2 {
-  font-weight: 700;
+  font-weight: 500;
   margin-bottom: 2px;
 }
 
 h3 {
-  font-weight: 700;
+  font-weight: 500;
   margin-bottom: 4px;
   margin-top: 2px;
 }
@@ -69,12 +69,12 @@ h5 {
 }
 
 h6 {
-  font-weight: normal;
+  font-weight: 700;
 }
 
 // Paragraph
 p {
-  font-size: @base-font-size * 1.286; /* 18px */
+  font-size: @p; /* 18px */
   line-height: @base-line-height * 1.399; /* 31px */
 }
 
@@ -94,7 +94,7 @@ blockquote {
   position: relative;
   border-left: none;
   padding-left: 19px;
-  
+
   p {
     font-size: @base-font-size * 1.429;
     line-height: @base-line-height * 1.259;
@@ -106,7 +106,7 @@ blockquote {
     line-height: @base-line-height * 1.399;
     font-style: italic;
     color: @base;
-    
+
     &:before {
       content: "";
     }
