--- a/wordpress/wp-content/themes/thulme/style.css
+++ b/wordpress/wp-content/themes/thulme/style.css
@@ -380,6 +380,7 @@ you can use the generic selector below, but it's slower:
 /* 29px */
 /* 28px */
 /* 24px */
+/* 18px */
 .inline-block {
   display: inline-block;
   zoom: 1;
@@ -721,24 +722,18 @@ a:hover {
 }
 h1,
 .h1 {
-  font-size: 62.006px /* 64px */;
+  font-size: 39.998000000000005px /* 40px */;
 }
 h2,
 .h2 {
-  font-size: 51.996px /* 52px */;
-}
-h3,
-.h3 {
-  font-size: 39.998000000000005px /* 40px */;
-}
-h4,
-.h4 {
-  font-size: 28.994000000000003px /* 29px */;
-}
-h5,
-.h5 {
   font-size: 28px /* 28px */;
 }
+h3,
+.h3,
+h4,
+.h4,
+h5,
+.h5,
 h6,
 .h6 {
   font-size: 23.996px /* 24px */;
@@ -758,14 +753,14 @@ h6,
   line-height: 1.2em;
 }
 h1 {
-  font-weight: 700;
+  font-weight: 500;
 }
 h2 {
-  font-weight: 700;
+  font-weight: 500;
   margin-bottom: 2px;
 }
 h3 {
-  font-weight: 700;
+  font-weight: 500;
   margin-bottom: 4px;
   margin-top: 2px;
 }
@@ -777,7 +772,7 @@ h5 {
   font-weight: 500;
 }
 h6 {
-  font-weight: normal;
+  font-weight: 700;
 }
 p {
   font-size: 18.004px;
@@ -7893,7 +7888,12 @@ a .icon-flip-vertical:before {
   border: 0;
 }
 .banner {
-  max-width: 342px;
+  background-color: #ecf0f1;
+  border-bottom: 1px solid #bdc3c7;
+  padding-bottom: 17.234px;
+}
+.banner .container-fluid {
+  max-width: 302px;
   margin-right: auto;
   margin-left: auto;
 }
