custom footer template

--- a/wordpress/wp-content/themes/thulme/assets/less/style.less
+++ b/wordpress/wp-content/themes/thulme/assets/less/style.less
@@ -50,3 +50,11 @@
   margin-right: auto;
   margin-left: auto;
 }
+
+.content-info {
+  border-top: 1px solid @silver;
+
+  max-width: 50em;
+  margin: (@base-font-size * @base-line-height) auto;
+  padding-top: (@base-font-size * @base-line-height);
+}
