category shown above single posts

--- a/wordpress/wp-content/themes/thulme/assets/less/style.less
+++ b/wordpress/wp-content/themes/thulme/assets/less/style.less
@@ -89,3 +89,18 @@ body {
     right: 20px;
   }
 }
+
+.hentry {
+  header {
+    margin-bottom: (@base-font-size * @base-line-height);
+  }
+}
+
+.trail {
+  border-bottom: 1px solid @silver;
+
+  margin-bottom: (@base-font-size * @base-line-height);
+  padding-bottom: (@base-font-size * @base-line-height);
+
+  font-size: @h6;
+}
