--- a/wordpress/wp-content/themes/thulme/style.css
+++ b/wordpress/wp-content/themes/thulme/style.css
@@ -7895,14 +7895,20 @@ body {
   background-repeat: no-repeat;
   background-size: contain;
   display: inline-block;
-  width: 280px;
-  height: 280px;
+  width: 140px;
+  height: 140px;
   max-width: 100%;
   font: 0/0 a;
   color: transparent;
   text-shadow: none;
   background-color: transparent;
   border: 0;
+}
+@media (min-width: 979px) {
+  .brand {
+    width: 280px;
+    height: 280px;
+  }
 }
 .banner {
   text-align: center;
