excluded demo styles from flat-ui to save space

--- a/wordpress/wp-content/themes/thulme/assets/less/flat-ui/flat-ui.less
+++ b/wordpress/wp-content/themes/thulme/assets/less/flat-ui/flat-ui.less
@@ -11,7 +11,7 @@
 @import "mixins";
 
 // Modules
-@import "modules/demo";
+// @import "modules/demo";
 @import "modules/type";
 @import "modules/buttons";
 @import "modules/caret";
