style code cleanup

--- a/wordpress/wp-content/themes/thulme/assets/less/style.less
+++ b/wordpress/wp-content/themes/thulme/assets/less/style.less
@@ -12,9 +12,12 @@
 // Font Awesome
 @import "font-awesome/font-awesome";
 
-// Theme partials
+// Theme settings
 @import "config";
 @import "mixins";
+
+// Theme partials
+@import "partials/content";
 
 // Background color
 body {
@@ -34,10 +37,10 @@ body {
 
   .hide-text();
 
-  @media (min-width: @tabletBreakpoint) {
-    width: 280px;
-    height: 280px;
-  }
+  // @media (min-width: @tabletBreakpoint) {
+  //   width: 280px;
+  //   height: 280px;
+  // }
 }
 
 
@@ -60,13 +63,13 @@ body {
     margin-bottom: (2 * @base-font-size * @base-line-height);
   }
 
-  @media (min-width: @tabletBreakpoint) {
-    position: absolute;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    width: 33%;
-  }
+  // @media (min-width: @tabletBreakpoint) {
+  //   position: absolute;
+  //   top: 0;
+  //   left: 0;
+  //   bottom: 0;
+  //   width: 33%;
+  // }
 }
 
 .wrap,
@@ -75,10 +78,10 @@ body {
   margin: (@base-font-size * @base-line-height) auto;
   padding-top: (@base-font-size * @base-line-height);
 
-  @media (min-width: @tabletBreakpoint) {
-    margin-left: 33%;
-    margin-right: 140px;
-  }
+  // @media (min-width: @tabletBreakpoint) {
+  //   margin-left: 33%;
+  //   margin-right: 140px;
+  // }
 }
 
 .content-info {
@@ -90,18 +93,10 @@ body {
   margin-left: 20px;
   margin-right: 0;
 
-  @media (min-width: @tabletBreakpoint) {
-    float: none;
-    position: absolute;
-    right: 20px;
-  }
+  // @media (min-width: @tabletBreakpoint) {
+  //   float: none;
+  //   position: absolute;
+  //   right: 20px;
+  // }
 }
 
-.hentry {
-  header {
-    margin-bottom: (@base-font-size * @base-line-height);
-  }
-}
-
-.page-header {
-}
