--- a/wordpress/wp-content/themes/thulme/style.css
+++ b/wordpress/wp-content/themes/thulme/style.css
@@ -7080,7 +7080,7 @@ a .icon-flip-vertical:before {
   content: "\f0da";
 }
 .icon-columns:before {
-  content: "\f0db";
+  content: 12;
 }
 .icon-sort:before {
   content: "\f0dc";
@@ -7597,19 +7597,109 @@ a .icon-flip-vertical:before {
   background-color: transparent;
   border: 0;
 }
-.wrap.content .hentry header {
-  margin-bottom: 17.234px;
+body {
+  width: 100%;
+  *zoom: 1;
+}
+body:before,
+body:after {
+  display: table;
+  content: "";
+}
+body:after {
+  clear: both;
+}
+.document {
+  position: relative;
+}
+.document .page-header,
+.document .content {
+  display: inline;
+  float: left;
+  width: 64.58333333333334%;
+  margin: 0 1.0416666666666665%;
+  margin-left: 17.708333333333332%;
+  margin-right: 17.708333333333332%;
+}
+.document .social {
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+@media (min-width: 979px) {
+  .document .page-header,
+  .document .content {
+    display: inline;
+    float: left;
+    width: 71.875%;
+    margin: 0 1.5625%;
+    margin-top: 34.468px;
+  }
+  .document .social {
+    position: relative;
+    top: auto;
+    right: auto;
+    display: inline;
+    float: left;
+    width: 21.875%;
+    margin: 0 1.5625%;
+    margin-top: 34.468px;
+  }
+}
+.document .social .iconbar {
+  float: right;
+}
+.document .hentry header {
+  margin-bottom: 51.702000000000005px;
+}
+@media (min-width: 979px) {
+  body {
+    max-width: 1468.5px;
+  }
+}
+.banner,
+.document,
+.content-info {
+  display: inline;
+  float: left;
+  width: 97.91666666666666%;
+  margin: 0 1.0416666666666665%;
+}
+@media (min-width: 979px) {
+  .banner {
+    display: inline;
+    float: left;
+    width: 31.25%;
+    margin: 0 1.0416666666666665%;
+  }
+}
+@media (min-width: 979px) {
+  .document {
+    display: inline;
+    float: left;
+    width: 64.58333333333334%;
+    margin: 0 1.0416666666666665%;
+  }
+}
+@media (min-width: 979px) {
+  .content-info {
+    display: inline;
+    float: left;
+    width: 64.58333333333334%;
+    margin: 0 1.0416666666666665%;
+    margin-left: 34.37499999999999%;
+  }
 }
 body {
   background-color: #fdfefe;
 }
-.brand {
+.logo {
   background-image: url('assets/images/thulme.com-symbol.png');
   background-repeat: no-repeat;
   background-size: contain;
   display: inline-block;
-  width: 140px;
-  height: 140px;
+  width: 280px;
+  height: 280px;
   max-width: 100%;
   font: 0/0 a;
   color: transparent;
@@ -7617,32 +7707,26 @@ body {
   background-color: transparent;
   border: 0;
 }
+/*
+ * Header (banner)
+ */
 .banner {
   text-align: center;
 }
-.banner .container-fluid {
-  max-width: 302px;
-  margin-right: auto;
+.banner .brand,
+.banner .navigation {
+  margin-top: 34.468px;
   margin-left: auto;
-}
-.banner .brand {
-  display: block;
-  margin: 68.936px auto 34.468px;
+  margin-right: auto;
+  max-width: 280px;
 }
 .banner .description {
   margin-bottom: 34.468px;
+  margin-top: 34.468px;
 }
-.wrap,
-.content-info {
-  max-width: 720px;
-  margin: 17.234px auto;
-  padding-top: 17.234px;
-}
+/*
+ * Footer (content info)
+ */
 .content-info {
   border-top: 1px solid #bdc3c7;
-}
-.social {
-  float: right;
-  margin-left: 20px;
-  margin-right: 0;
 }
