--- a/wordpress/wp-content/themes/thulme/assets/less/style.less
+++ b/wordpress/wp-content/themes/thulme/assets/less/style.less
@@ -60,11 +60,16 @@ body {
   background-size: contain;
 
   display: inline-block;
-  width: 280px;
-  height: 280px;
+  width: 140px;
+  height: 140px;
   max-width: 100%;
 
   .hide-text();
+
+  @media (min-width: @tabletBreakpoint) {
+    width: 280px;
+    height: 280px;
+  }
 }
 
 /*
