added post thumbnails

--- a/wordpress/wp-content/themes/thulme/assets/less/partials/document.less
+++ b/wordpress/wp-content/themes/thulme/assets/less/partials/document.less
@@ -48,6 +48,12 @@
   .hentry {
     header {
       margin-bottom: (3 * @base-font-size * @base-line-height);
+
+      img {
+        float: right;
+        max-width: 50%;
+        height: auto;
+      }
     }
   }
 
