--- a/wordpress/wp-content/themes/thulme/style.css
+++ b/wordpress/wp-content/themes/thulme/style.css
@@ -7612,7 +7612,6 @@ body:after {
 .document {
   position: relative;
 }
-.document .page-header,
 .document .content {
   display: inline;
   float: left;
@@ -7623,11 +7622,10 @@ body:after {
 }
 .document .social {
   position: absolute;
-  top: 0;
+  top: 17.234px;
   right: 0;
 }
 @media (min-width: 979px) {
-  .document .page-header,
   .document .content {
     display: inline;
     float: left;
@@ -7643,7 +7641,7 @@ body:after {
     float: left;
     width: 21.875%;
     margin: 0 1.5625%;
-    margin-top: 34.468px;
+    margin-top: 51.702000000000005px;
   }
 }
 .document .social .iconbar {
