--- a/wordpress/wp-content/themes/thulme/style.css
+++ b/wordpress/wp-content/themes/thulme/style.css
@@ -7720,18 +7720,46 @@ body {
  * Header (banner)
  */
 .banner {
+  background-color: #f5f7f7;
+  border-bottom: 1px solid #ecf0f1;
   text-align: center;
 }
 .banner .brand,
 .banner .navigation {
-  margin-top: 34.468px;
+  margin-top: 17.234px;
   margin-left: auto;
   margin-right: auto;
   max-width: 280px;
 }
+.banner #nav-toggle {
+  margin-bottom: 17.234px;
+}
+@media (min-width: 979px) {
+  .banner #nav-toggle {
+    display: none;
+  }
+}
+@media (max-width: 979px) {
+  .banner .navigation,
+  .banner .description {
+    display: none;
+  }
+}
+.banner .logo,
 .banner .description {
-  margin-bottom: 34.468px;
-  margin-top: 34.468px;
+  margin-bottom: 17.234px;
+}
+@media (min-width: 979px) {
+  .banner .logo,
+  .banner .description {
+    margin-bottom: 51.702000000000005px;
+  }
+}
+@media (min-width: 979px) {
+  .banner {
+    background-color: transparent;
+    border-bottom: none;
+  }
 }
 /*
  * Footer (content info)
