grid tweaks for mobile

--- a/wordpress/wp-content/themes/thulme/assets/less/config.less
+++ b/wordpress/wp-content/themes/thulme/assets/less/config.less
@@ -7,3 +7,4 @@
 // Responsive
 // --------------------------------------------------
 @tabletBreakpoint:      979px;
+@mobileBreakpoint:      520px;
