color themes for main categories

--- a/wordpress/wp-content/themes/thulme/assets/less/config.less
+++ b/wordpress/wp-content/themes/thulme/assets/less/config.less
@@ -2,6 +2,10 @@
 // Color Swatches
 // --------------------------------------------------
 @background:      mix(white, @clouds, 90%);
+@thulme:          @asbestos;
+@startup-tools:   @alizarin;
+@open-design:     @turquoise;
+@weiji:           @peter-river;
 
 //
 // Responsive
