--- a/wordpress/wp-content/themes/thulme/assets/less/flat-ui/config.less
+++ b/wordpress/wp-content/themes/thulme/assets/less/flat-ui/config.less
@@ -53,8 +53,8 @@
 @warning:          @sun-flower;
 @info:             @peter-river;
 
-@link-color:       @green-sea;
-@link-hover-color: @turquoise;
+@link-color:       @asbestos;
+@link-hover-color: @midnight-blue;
 
 // Typography
 // -------------------------
